[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HOPS"
version = "0.1.1"
description = "Hierarchy of Pure States implementation in Python"
authors = [
  { name = "Sebastian Toivonen", email = "smtoiv@utu.fi" }
]
readme = "README.md"
license = { file = "LICENCE" }
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "more-itertools"
]

[tool.setuptools.packages.find]
where = ["."]